# umbc-mcp

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/app/: config.py  main.py
src/app/chat/: dependencies.py  exceptions.py  router.py  schemas.py  service.py
src/app/llm_providers/: client.py
tests/: conftest.py
tests/unit/: test_chat_service.py  test_main.py
tests/unit/chat/: test_dependencies.py  test_prompts.py
tests/unit/llm_providers/: test_client.py
tests/unit/routers/: test_chat.py
