[project]
name = "umbc-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.1",
    "httpx>=0.28.1",
    "openai>=2.8.0",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.0",
    "pytest-mock>=3.15.1",
]
